[tool.poetry]
name = "gaussian-processes"
version = "0.1.0"
description = "This project seeks to use Gaussian Process's to model latent functions w/seasonality"
authors = ["Kyle McLester <kmcleste@uncc.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pymc3 = "3.9.1"
aesara = "^2.6.4"
ipykernel = "^6.13.0"
seaborn = "^0.11.2"
arviz = "0.8.3"
numpy = "1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
